[gd_scene load_steps=19 format=3 uid="uid://dmwcrwdr54vhi"]

[ext_resource type="Script" uid="uid://by25b1i8wnuak" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]
[ext_resource type="Texture2D" uid="uid://cxl3hhsrcpw5v" path="res://art_me/Character/Dżoszuła_Walk_Teraz.png" id="2_1g8jr"]
[ext_resource type="PackedScene" uid="uid://bmjhjuoygqt1l" path="res://scenes/ui/message_window.tscn" id="2_fe2o3"]
[ext_resource type="Texture2D" uid="uid://dgeryoaw0b860" path="res://art_me/main_menu/1JOSH_BG1.png" id="2_wb0q5"]
[ext_resource type="Texture2D" uid="uid://c3ecdn8dlo0tn" path="res://art_me/Maska_Przyszłości.png" id="2_x2yvf"]
[ext_resource type="Texture2D" uid="uid://cldv2jadhcn35" path="res://art_me/main_menu/1JOSH_BG2.png" id="3_q85j6"]
[ext_resource type="Texture2D" uid="uid://d33ngorjcga4e" path="res://art_me/Maska_Przsszłości.png" id="3_uhagc"]
[ext_resource type="Texture2D" uid="uid://cwyqjuib0jb6r" path="res://art_me/main_menu/1JOSH_BG3.png" id="4_8g5eo"]

[sub_resource type="Gradient" id="Gradient_wb0q5"]
offsets = PackedFloat32Array(0, 0.49819493, 0.5956679)
colors = PackedColorArray(0, 0, 0, 1, 0.9370629, 0.9370629, 0.9370629, 0.06293708, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q85j6"]
gradient = SubResource("Gradient_wb0q5")
fill_from = Vector2(0, 0.54273504)
fill_to = Vector2(0.6581197, 0.5726496)

[sub_resource type="Animation" id="Animation_x2yvf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(824, 326.00003)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Background2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_m1kxf"]
resource_name = "intro"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_x2yvf"), ExtResource("3_uhagc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.4, 2, 2.9, 3.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1054, 326.00003), Vector2(824, 326.00003), Vector2(600, 326), Vector2(1054, 326.00003), Vector2(824, 326.00003), Vector2(600, 326)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Sprite2D:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9, 1.4, 2, 2.9, 3.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Background2:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Background3:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(2.4666667, 2.9, 3.3666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhagc"]
_data = {
&"RESET": SubResource("Animation_x2yvf"),
&"intro": SubResource("Animation_m1kxf")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_btxxm"]
atlas = ExtResource("2_1g8jr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb0q5"]
atlas = ExtResource("2_1g8jr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q85j6"]
atlas = ExtResource("2_1g8jr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g5eo"]
atlas = ExtResource("2_1g8jr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7suek"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btxxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb0q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q85j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g5eo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("first_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")
first_button = NodePath("LeftContainer/ButtonContainer/VBoxContainer/StartGame")

[node name="Gradient" type="TextureRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_q85j6")
expand_mode = 1

[node name="Background2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q85j6")
expand_mode = 1

[node name="Background3" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8g5eo")
expand_mode = 1

[node name="Background1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wb0q5")
expand_mode = 1

[node name="LeftContainer" type="MarginContainer" parent="."]
z_index = 7
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 315.0
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 30

[node name="GameTitle" type="Label" parent="LeftContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0.92156863, 0.92941177, 0.9137255, 1)
theme_override_colors/font_outline_color = Color(0.03529412, 0.039215688, 0.078431375, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 50
text = "DŻOSZUŁA"
horizontal_alignment = 1

[node name="ButtonContainer" type="MarginContainer" parent="LeftContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="LeftContainer/ButtonContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="StartGame" type="Button" parent="LeftContainer/ButtonContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="About" type="Button" parent="LeftContainer/ButtonContainer/VBoxContainer"]
layout_mode = 2
text = "About"

[node name="Quit" type="Button" parent="LeftContainer/ButtonContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="RightContainer" type="MarginContainer" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -842.0
grow_horizontal = 0
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="RightContainer"]
libraries = {
&"": SubResource("AnimationLibrary_uhagc")
}
autoplay = "intro"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RightContainer/AnimationPlayer"]
z_index = 3
position = Vector2(794, 366)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_7suek")
autoplay = "default"

[node name="Sprite2D" type="Sprite2D" parent="RightContainer/AnimationPlayer"]
modulate = Color(1, 1, 1, 0)
z_index = 3
position = Vector2(824, 326.00003)
scale = Vector2(10, 10)

[node name="AboutWindow" parent="." instance=ExtResource("2_fe2o3")]
visible = false
layout_mode = 1

[connection signal="pressed" from="LeftContainer/ButtonContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="LeftContainer/ButtonContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="LeftContainer/ButtonContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
